# Rain-Engine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  build-debug.sh  build.sh
src/: glfw_utils.hpp  main.cpp
src/engine/: GameObject.cpp  GameObject.hpp  GameScript.cpp  GameScript.hpp  Level.cpp  Level.hpp
src/scripts/: test_script.cpp  test_script.hpp
